# like-shogi

./: Cargo.toml  README.md  index.html
src/: koma.rs  main.rs
src/component/: mod.rs  shogi.rs
